# VaultSeek

./: .gitignore  ARCHITECTURE.md  CONFIG-UPDATE.md  LICENSE  LOCAL-TEST-REPORT.md  README.md  SEARCH-UPDATE.md  STATUS.md  TEST-REPORT.md  VECTOR-BUILD-FEATURE.md  index.html  package-lock.json  package.json  setup_models.sh  stress_test_plan.md  vite.config.js
.claw/sessions/: session-1779259291944-0.jsonl
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE-ANALYSIS.md  ARCHITECTURE.md  FIXES-LOG.md  RAG.md  RUNNING.md  WEB-TEST-REPORT.md
docs/archive/: FIX-NOTES.md  IMPLEMENTATION.md  IMPORT-FIX.md  TEST-RESULTS.md  WEB-TEST-PLAN.md
docs/internal/: CHANGELOG.md  ENGINEERING.md  EXPANSION_STRATEGY.md  MASTER_BLUEPRINT.md  MEMORY.md  MIGRATION.md  PROMPT_LIBRARY.md  RELEASE_CHECKLIST.md  SECURITY.md  TELEMETRY.md  UI_DESIGN_SPEC.md  VECTOR_ASSET_SCHEMA.md
docs/internal/ADR/: 000-adr-template.md  001-choice-of-rust-parser.md
docs/user/: STATUS.md
docs/website/: index.html
src/: App.jsx  i18n.js  main.jsx
src-tauri/: Cargo.toml  capabilities.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: batch_processor.rs  benchmarks.rs  commands.rs  config.rs  db.rs  embedding.rs  extractor.rs  indexer.rs  intent.rs  llm.rs  main.rs  parser.rs  prompt_manager.rs  retrieval.rs  server.rs  state.rs  test_embed.rs  test_keyring.rs  types.rs
src-tauri/tests/: integration_tests.rs
src/components/: BatchExportModal.jsx  ChatMessage.jsx  ErrorBoundary.jsx  HighlightText.jsx  ReferenceList.jsx  SettingsModal.jsx  StructuredContent.jsx  ThinkingChain.jsx
src/services/: chunker.js  embedding.js  index.js  parser.js  retrieval.js  storage.js  vectorIndex.js
src/store/: appReducer.js
src/styles/: index.css
