[package]
name = "vaultseek"
version = "1.2.0"
description = "Local AI-powered semantic search engine"
authors = ["liuxuran"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
notify = "6.1.1"
walkdir = "2.5"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
ort = "2.0.0-rc.9"
ndarray = "0.17"
tokenizers = "0.19"
rayon = "1.10" # 并行处理，大幅提升 800+ 文件的扫描速度
pdf-extract = "0.7"
bincode = "1.3"
zip = "2.1"
tauri-plugin-global-shortcut = "2.0.0-beta"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
futures-util = "0.3"
calamine = "0.35.0"
keyring = "3.0.0"
axum = "0.7"
parking_lot = "0.12.5"

[dev-dependencies]
tempfile = "3.17"
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
panic = "abort" # 减少二进制体积
codegen-units = 1
lto = true
opt-level = "s" # 优化体积
strip = true
